bat.bool1.posneg.PosNeg.scala.error
Compilation error:
PosNeg:4: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if ((a<0) && (b<0) && (negative==true)){
         ^